# fortrangis

./: .codedocs  .copr.enc  .gitignore  .travis-build.sh  .travis.yml  CMakeLists.txt  Makefile.am  README.md  autogen.sh  cmake_config.h.in  configure.ac  fortrangis.spec
debian/: changelog  control  copyright  docs  gbp.conf  libfortrangis-dev.fortran-mod  libfortrangis-dev.install  libfortrangis-doc.docs  libfortrangis2.shlibs  libfortrangis3.install  libfortrangis3.shlibs  rules  vercheck
doc/: Doxyfile.in  Makefile.am  build.dox  fpp  globe.dox  mainpage.dox
fedora/SPECS/: fortrangis.spec
include/: arrayof_pre.F90  gdalheaders.c  gdalproto.c  gdalproto_doxy.f90  gdalproto_interf.f90  gdalproto_proc.f90  gdalproto_type.f90  mkintcproto.py
libfortranc/: CMakeLists.txt  Makefile.am  c_test.c  fortranc.F90  fortranc_test.F90  libfortranc.vfproj
libfortrangis/: CMakeLists.txt  Makefile.am  gdal.F90  gdal_test.F90  libfortrangis.vfproj  proj.F90  proj6.F90  proj6_test.F90  proj_test.F90  proj_test6.F90  readosm.F90  readosm_test.F90  readosm_test.osm  shapelib.F90  shapelib_dump.F90  shapelib_test.F90  shapelib_test.f90  shapelibint.c  shp_fxtr.F90  ung2shp.F90
sourceforge/: README  dav.css  download.php  index.php  projnews.html  style.css  update.sh
tools/: gdal.F90  gdal_gcp.f90  gdalproto.c  mkintcproto.py
trunk/: configure.ac  fortrangis.spec
trunk/doc/: Doxyfile.in  Makefile.am  footer.html  fpp  globe.dox  mainpage.dox  metadata.dox
trunk/include/: arrayof_post.F90  arrayof_pre.F90  gdalgcpproto.c  gdalproto.c  gdalproto_doxy.f90  gdalproto_interf.f90  gdalproto_type.f90  mkintcproto.py
trunk/libfortranc/: Makefile.am  fortranc.F90  fortranc_test.F90  iso_varying_string.F90  return_charpp.c
trunk/libfortrangis/: Makefile.am  gdal.F90  gdal_test.F90  gdal_test.f90  proj.F90  readosm_test.F90  shapelib.F90  shapelib_c.c  shapelib_dump.F90  shapelib_test.f90  shapelibint.c  ung2shp.F90
trunk/sourceforge/: index.php  style.css
trunk/tools/: gdal.F90  gdalproto.c  gdaltypes.f90  mkintcproto.py
