ACLOCAL_AMFLAGS = -I m4

SUBDIRS = libfortranc libfortrangis doc

noinst_HEADERS = include/gdalproto_doxy.f90 include/gdalproto_interf.f90 \
 include/gdalproto_proc.f90 include/gdalproto_type.f90 \
 include/arrayof_pre.F90 include/arrayof_post.F90

dist_pkgdoc_DATA = README.md COPYING

EXTRA_DIST = fedora/SPECS/fortrangis.spec
